# weavai-developer-library

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  config_models.py  requirements-dev.txt  requirements.txt
agents/: delete_chat_history.py  exceptions.py  get_agent_response.py  get_agent_types.py  get_chat_history.py  models.py  service.py
chats/: chat.py  exceptions.py  get_chat_history.py  get_chat_logs.py  models.py  service.py
documents/: models.py  service.py
examples/: basic_processing.ipynb
package/: .env.test  .gitignore  Makefile  README.md  pyproject.toml
package/examples/: basic_processing.ipynb  package_test.ipynb
package/weavaidev/: __init__.py  config_models.py  requirements.txt
package/weavaidev/actions/: __init__.py  exceptions.py  models.py
package/weavaidev/agents/: __init__.py  exceptions.py  models.py  service.py
package/weavaidev/chats/: __init__.py  exceptions.py  models.py  service.py
package/weavaidev/documents/: __init__.py  exceptions.py  models.py  service.py
package/weavaidev/folders/: __init__.py  exceptions.py  models.py
package/weavaidev/forms/: __init__.py  exceptions.py  models.py
package/weavaidev/workflows/: __init__.py  exceptions.py  models.py  service.py
templates/: basic_processing.ipynb  process_form.md  run_workflow.py  template.ipynb  upload_and_get_document.py  upload_document.md
workflows/: exceptions.py  get_all_workflows.py  get_single_workflow.py  get_workflow_status.py  get_workflows_for_document.py  models.py  rerun_workflow.py  run_workflow.py  service.py  (+1 more)
(+27 files in other folders)
