[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "weavaidev"
authors = [
    {name = "Weav.AI", email = "weav@weavai.com"}
]
description = "weav.ai developer library"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic == 2.9.2",
    "loguru == 0.7.2",
    "pandas == 2.2.3",
    "python-dotenv == 1.0.1",
    "requests == 2.32.3"
]